makefiles are also generated by gyp

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ build
 .gitmodules
 objc/gen
 build_ios
+deps/json11.target.mk
+deps/sqlite3.target.mk
+deps/SQLiteCpp.target.mk
+GypAndroid.mk
+libPlay2_android.target.mk
+libPlay2.target.mk
